--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               />
             </div>
             <div class="swiper-slide swiper-slide-main">
-              <a href="category.html"
+              <a href="category.html" class="swiper-main"
                 ><img
                   src="/Streetster/img/category/bike.png"
                   alt="Велосипед"
