fixed social links

--- a/blog.html
+++ b/blog.html
@@ -98,10 +98,13 @@
                 >
               </ul>
               <div class="social-link-header">
-                <a href="" class="inst"
+                <a
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  class="inst"
                   ><i class="fa-brands fa-instagram"></i
                 ></a>
-                <a href="" class="fb"
+                <a href="https://www.facebook.com/" target="_blank" class="fb"
                   ><i class="fa-brands fa-facebook-f"></i
                 ></a>
               </div>
@@ -272,8 +275,12 @@
             </div>
           </div>
           <div class="social-link">
-            <a href="" class="inst"><i class="fa-brands fa-instagram"></i></a>
-            <a href="" class="fb"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" class="inst"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https://www.facebook.com/" target="_blank" class="fb"
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
           </div>
         </div>
         <p class="footer-copyright">© STREETSTER — Все права защищены</p>
