--- a/wallet.html
+++ b/wallet.html
@@ -98,10 +98,13 @@
                 >
               </ul>
               <div class="social-link-header">
-                <a href="" class="inst"
+                <a
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  class="inst"
                   ><i class="fa-brands fa-instagram"></i
                 ></a>
-                <a href="" class="fb"
+                <a href="https://www.facebook.com/" target="_blank" class="fb"
                   ><i class="fa-brands fa-facebook-f"></i
                 ></a>
               </div>
